# ProductStrategyCoPilot

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml  render.yaml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
artifacts/: README.md  reference_benchmark_summary.md
docs/: ARCHITECTURE.md  EXAMPLES.md
examples/: README.md  reference_clinic_compliance_assistant.json  reference_meal_planning_subscription.json
product-strategy-copilot/: .gitignore  README.md  pyproject.toml  railway.toml
product-strategy-copilot/artifacts/: reference_benchmark_results.csv  reference_benchmark_summary.md
product-strategy-copilot/docs/: EXAMPLES.md
product-strategy-copilot/examples/: README.md  reference_agency_meeting_assistant.json  reference_local_repair_marketplace.json
product-strategy-copilot/scripts/: example_inputs.json
product-strategy-copilot/src/: __init__.py  logging_config.py  models.py
product-strategy-copilot/src/agents/: __init__.py  base.py  critic.py
product-strategy-copilot/src/api/: main.py  routes.py
product-strategy-copilot/tests/: test_llm_client.py  test_routes.py
scripts/: benchmark.py  prompt_regression.py  regression_cases.json
src/: models.py
src/agents/: planner.py
src/api/: __init__.py  main.py  routes.py
src/core/: __init__.py  config.py  llm_client.py  prompt_registry.py
src/evaluation/: metrics.py
tests/: test_agents.py  test_metrics.py  test_prompt_regression.py  test_routes.py  test_service.py
(+3 files in other folders)
