[project]
name = "product-strategy-copilot"
version = "0.1.0"
description = "Multi-agent FastAPI service for structured product strategy generation and critique"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Product Strategy Copilot", email = "ai@example.com"}]
license = {text = "MIT"}

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "python-dotenv==1.0.0",
    "httpx==0.25.1",
    "tenacity==8.2.3",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.3",
    "pytest-cov==4.1.0",
    "pytest-asyncio==0.21.1",
    "black==23.12.0",
    "ruff==0.1.8",
    "mypy==1.7.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
